--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
+        <h1>Pokedex</h1>
+        <div class="wrapper">
+           <div class="card"> 
+               
+            </div>
+            
+          </div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
