Created Card with hardcoded name, number, bgcolor, and image.

--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>Hello Pokemon!</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pokedex</title>
+    <link rel="stylesheet" href="pokemon.css">
+  </head>
+  <body>
+    <h1>Pokedex</h1>
+
+      <div class="container">
+          <div class="card">
+              <div class="container">
+                <div class="row">
+                    <h4 class="pName">Pikachu</h4> 
+                    <h4 class="pNum">#025</h4>
+                    <div class="line"></div>
+                </div>
+                <img src="../imgs/pika.jpg">
+              </div>
+          </div>
+      </div>
+      
+    <script src="app.js"></script>
+  </body>
 </html>
