--- a/web/index.html
+++ b/web/index.html
@@ -22,6 +22,6 @@
           </div>
       </div>
       
-    <script src="app.js"></script>
+    <script src="index.js" async></script>
   </body>
 </html>
