--- a/web/index.html
+++ b/web/index.html
@@ -21,6 +21,7 @@
               </div>
           </div>
       </div>
+      <button>view all</button>
       
     <script src="index.js" async></script>
   </body>
