--- a/web/index.html
+++ b/web/index.html
@@ -12,12 +12,12 @@
       <div class="container">
           <div class="card">
               <div class="container">
-                <div class="row">
+                <div class="column">
                     <h4 class="pName">Pikachu</h4> 
                     <h4 class="pNum">#025</h4>
                     <div class="line"></div>
                 </div>
-                <img src="../imgs/pika.jpg">
+                  <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png">
               </div>
           </div>
       </div>
