--- a/web/index.html
+++ b/web/index.html
@@ -8,10 +8,11 @@
   </head>
   <body>
     <h1>Pokedex</h1>
-      
-    <label for="numberOfPokemons">Number of Pokemons:</label>
-    <input type="text" id="numberOfPokemons" name="numberOfPokemons">
-    <button>view all</button>
+      <div class="container">
+        <label for="numberOfPokemons">Number of Pokemons:</label>
+        <input type="text" id="numberOfPokemons" name="numberOfPokemons">
+        <button>view all</button>
+      </div>
 
       <div class="container">
           <div class="card">
@@ -21,7 +22,7 @@
                     <h4 class="pNum">#025</h4>
                     <div class="line"></div>
                 </div>
-                <img src="../imgs/pika.jpg">
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png">
               </div>
           </div>
       </div>
