--- a/web/index.html
+++ b/web/index.html
@@ -13,8 +13,8 @@
     <input type="text" id="numberOfPokemons" name="numberOfPokemons">
     <button>view all</button>
 
-      <div class="container">
-          <div class="card">
+      <div class="container" id="cardDeck">
+          <!-- <div class="card">
               <div class="container">
                 <div class="row">
                     <h4 class="pName">Pikachu</h4> 
@@ -23,7 +23,7 @@
                 </div>
                 <img src="../imgs/pika.jpg">
               </div>
-          </div>
+          </div> -->
       </div>
       
       
