--- a/web/index.html
+++ b/web/index.html
@@ -14,14 +14,14 @@
     <button>view all</button>
 
       <div class="container" id="cardDeck">
-          <!-- <div class="card">
+          <div class="card">
               <div class="container">
                 <div class="row">
                     <h4 class="pName">Pikachu</h4> 
                     <h4 class="pNum">#025</h4>
                     <div class="line"></div>
                 </div>
-                <img src="../imgs/pika.jpg">
+                <!--img src="../imgs/pika.jpg"!-->
               </div>
           </div> -->
       </div>
