creating pull request

--- a/web/index.html
+++ b/web/index.html
@@ -22,13 +22,10 @@
                     <h4 class="pNum">#025</h4>
                     <div class="line"></div>
                 </div>
-<<<<<<< HEAD
                 <!--img src="../imgs/pika.jpg"!-->
-=======
                 <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png">
->>>>>>> 73ee4e5f1da399c280a301856e6b7ad93c266c97
               </div>
-          </div> -->
+          </div> 
       </div>
       
       
