working on the DOM

--- a/web/index.html
+++ b/web/index.html
@@ -13,21 +13,21 @@
         <input type="text" id="numberOfPokemons" name="numberOfPokemons">
         <button>view all</button>
       </div>
-
-      <div class="container">
+      <div id="poke_container" class="poke_container"></div>
+      <!--div class="container">
           <div class="card" id="cardDeck">
               <div class="container">
                 <div class="row">
                     <h4 class="pName"></h4> 
                     <h4 class="pNum"></h4>
                     <div class="line"></div>
-                </div>
+                </div!-->
                 <!--img src="../imgs/pika.jpg"!-->
                 <!--img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png"!-->
-                <img src="">
+                <!--img src="">
               </div>
           </div> 
-      </div>
+      <div!-->
     <script src="index.js" async></script>
   </body>
 </html>
