need to push rest data to web to handle ajax call and populate cards on html page

--- a/web/index.html
+++ b/web/index.html
@@ -3,92 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="pokemon.css">
+    <script src="index.js"></script>
     <title>Pokedex</title>
 </head>
 <body>
-  <div class="card-deck">
-    <div class="card">
-      <img class="card-img-top" src="img/bulbasaur.png" alt="Card image cap">
-      <div class="card-body">
-        <h5 id="pokemon" class="card-title">Pokemon Name</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">#1</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top" src="img/venusaur.png" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Pokemon Name</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">#2</small>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top" src="img/ivysaur.png" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Pokemon Name</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">#3</small>
-      </div>
-    </div>
+  <h1>Pokedex</h1>
+  <div id="cardGrid">
+
+
   </div>
-  
-<!--   
-  <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <div class="card h-100">
-            <img src="img/bulbasaur.png" class="card-img-top" alt="Pokemon character image">
-            <div class="card-body">
-              <h5 class="card-title" id="pokemon"></h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="img/ivysaur.png" class="card-img-top" alt="Pokemon character image">
-            <div class="card-body">
-              <h5 class="card-title">Raichu</h5>
-              <p class="card-text">This is a short card.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="img/venusaur.png" class="card-img-top" alt="Pokemon character image">
-            <div class="card-body">
-              <h5 class="card-title">Sandshrew</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="img/charmander.png" class="card-img-top" alt="Pokemon character image">
-            <div class="card-body">
-              <h5 class="card-title">Sandslash</h5>
-              <p class="card-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-            <div class="card h-100">
-              <img src="" class="card-img-top" alt="Pokemon character image">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
-              </div>
-            </div>
-          </div>
-      </div> -->
-    <script src="index.js"></script>
+    
 </body>
 </html>
