--- a/web/index.html
+++ b/web/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pokemon</title>
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <p>Hello Pokemon!</p>
+    <h1>Pokemon</h1>
+    <div class="wrapper">
+     
+    </div>
+    
 </body>
 </html>
