--- a/web/index.html
+++ b/web/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <p>Hello Pokemon!</p>
+    <div id="pokedex" class="pokedex">
+        <script src="app.js"></script>
+    </div>
 </body>
 </html>
